k8s/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: trivela-frontend
  labels:
    app: trivela
    component: frontend
spec:
  type: ClusterIP
  selector:
    app: trivela
    component: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
